# QtShanoir

./: AUTHORS  CMakeLists.txt  QtShanoirDownload.pro  README  main.cpp  qt_shanoir.cpp  qt_shanoir.h  qt_shanoir.ui  qtsoap  shanoirserverparameters.cpp  shanoirserverparameters.h  shanoirserverparameters.ui
CMake/: CPack.QtShanoirDescription.txt  CPackConfig.cmake  CPackDebConfig.cmake  CPackNsisConfig.cmake  CPackRpmConfig.cmake  FindQuaZip.cmake  QtShanoirConfig.cmake.in  QtShanoirGenerateInstall.cmake  QtShanoirSettings.cmake  UseQtShanoir.cmake.in
CMake/Modules/: list_header_directories_to_include.cmake  list_source_files.cmake
Code/: QtShanoir.cpp  QtShanoir.h  QtShanoirConfiguration.cpp  QtShanoirConfiguration.h  QtShanoirController.cpp  QtShanoirController.h  QtShanoirProgressWidget.cpp  QtShanoirProgressWidget.h  QtShanoirSearchWidget.cpp  QtShanoirSearchWidget.h  QtShanoirSettings.cpp  QtShanoirSettings.h  QtShanoirSettingsWidget.cpp  QtShanoirSettingsWidget.h  QtShanoirTreeWidget.cpp  QtShanoirTreeWidget.h  QtShanoirUploadWidget.cpp  QtShanoirUploadWidget.h  QtShanoirWebService.cpp  QtShanoirWebService.h  QtShanoirWsQuery.cpp  QtShanoirWsQuery.h  QtSoap.cpp  QtSoap.h  qtshanoirprogress.ui  qtshanoirsearchwidget.ui  qtshanoirsettingswidget.ui  qtshanoirtreewidget.ui  qtshanoiruploadwidget.ui  wsquery.cpp  wsquery.h
Code/quazip/: unzip.c  zip.c
DAO/: CMakeLists.txt  DAO.h  QtSoap.cpp  dao.cpp  parsetree.cpp  parsetree.h  qtshanoirdataset.cpp  qtshanoirdataset.h  qtshanoirdatasetprocessing.cpp  qtshanoirdatasetprocessing.h  qtshanoirdownload.cpp  qtshanoirdownload.h  qtshanoirdownloadwidget.ui  qtshanoirexam.cpp  qtshanoirexam.h  qtshanoirmain.cpp  qtshanoirmain.h  qtshanoirprocess.cpp  qtshanoirprocess.h  qtshanoirprocesseddataset.cpp  qtshanoirprocesseddataset.h  qtshanoirsettings.cpp  qtshanoirsettings.h  qtshanoirstudy.cpp  qtshanoirstudy.h  qtshanoirsubject.cpp  qtshanoirsubject.h  qtshanoirtree.cpp  qtshanoirtree.h  qtshanoirupload.cpp  qtshanoirupload.h  qtshanoiruploadprocesseddatasetattributes.cpp  qtshanoiruploadprocesseddatasetattributes.h  qtshanoirwebservice.cpp  qtshanoirwebservice.h  qtsoap.cpp  qtsoap.h
Demo/: CMakeLists.txt  Demo.cpp  Demo.h  FindQTSHANOIR.cmake  demo.ui  main.cpp
Documentation/Doxygen/: CMakeLists.txt  doc_makeall.sh.in  doxyfile.in  footer.html  header.html  qtshanoir_dox.css
GUI/: CMakeLists.txt  GUI.cpp  GUI.h  HierarchicalHeaderView.cpp  HierarchicalHeaderView.h  ProxyModelWithHeaderModels.cpp  ProxyModelWithHeaderModels.h  demo.cpp  demo.h  demo.ui  qtshanoirdetailswidget.cpp  qtshanoirdetailswidget.h  qtshanoirdetaislwidget.ui  qtshanoirdownloadwidget.cpp  qtshanoirdownloadwidget.h  qtshanoirdownloadwidget.ui  qtshanoirerrorwidget.cpp  qtshanoirerrorwidget.h  qtshanoirerrorwidget.ui  qtshanoirmainwidget.cpp  qtshanoirmainwidget.h  qtshanoirprogresswidget.cpp  qtshanoirprogresswidget.h  qtshanoirprogresswidget.ui  qtshanoirsearchwidget.cpp  qtshanoirsearchwidget.h  qtshanoirsearchwidget.ui  qtshanoirsettingswidget.cpp  qtshanoirsettingswidget.h  qtshanoirsettingswidget.ui  qtshanoirtreewidget.cpp  qtshanoirtreewidget.h  qtshanoirtreewidget.ui  qtshanoiruploadprocesseddatasetattributestemp.cpp  qtshanoiruploadprocesseddatasetattributestemp.h  qtshanoiruploadwidget.cpp  qtshanoiruploadwidget.h  qtshanoiruploadwidgetcoresfilesinputs.cpp  qtshanoiruploadwidgetcoresfilesinputs.h  qtshanoiruploadwidgetcoresfilesinputs.ui  (+47 more)
GUI/Resources/: qtshanoir.qrc
GUI/Resources/Images/flags/: Thumbs.db
Old/: qt_shanoir.h  shanoirserverparameters.h  shanoirserverparameters.ui
Old/qtsoap/: Makefile
Old/qtsoap/examples/easter/easter.app/Contents/: Info.plist
Old/qtsoap/examples/google/google.app/Contents/: Info.plist
Old/qtsoap/examples/population/: moc_population.cpp  moc_qtsoap.cpp
Old/qtsoap/examples/population/population.app/Contents/: Info.plist
Old/qtsoap/examples/population/population.app/Contents/MacOS/: population
Old/qtsoap/src/: qtsoap.h
QuaZip/: CMakeLists.txt  ioapi.c  quazipfile.h  quazipnewinfo.cpp  zip.c
Resources/: qtshanoir.qrc
Resources/Images/: Thumbs.db
qtsoap/examples/: Makefile
qtsoap/examples/easter/: Makefile  moc_easter.cpp  moc_qtsoap.cpp
qtsoap/examples/easter/easter.app/Contents/MacOS/: easter
qtsoap/examples/google/: Makefile  moc_google.cpp  moc_qtsoap.cpp
qtsoap/examples/google/google.app/Contents/MacOS/: google
qtsoap/examples/population/: Makefile
qtsoap/src/: qtsoap.cpp
